# harnex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: audit.md  check.md  codegen.md  completions.md  config-validation.md  constitution.md  envelope.md  export.md  file-mutation.md  graph.md  guard.md  init.md  jiff-time.md  lifecycle.md  module-doc.md  policy.md  telemetry.md  validate.md
.github/workflows/: ci.yml
crates/harness-cli/: CLAUDE.md  Cargo.toml
crates/harness-cli/src/: main.rs
crates/harness-cli/src/commands/: audit.rs  check.rs  codegen.rs  completions.rs  evidence.rs  export.rs  graph.rs  guard.rs  init.rs  lifecycle.rs  mod.rs  policy.rs  telemetry.rs  validate.rs
crates/harness-cli/tests/: cli_contract.rs
crates/harness-core/: CLAUDE.md  Cargo.toml
crates/harness-core/src/: check.rs  envelope.rs  error.rs  export.rs  lib.rs  path_guard.rs  sentinel.rs
crates/harness-core/src/audit/: managed_region.rs  mod.rs  settings_drift.rs
crates/harness-core/src/codegen/: mod.rs  renderer.rs  source.rs
crates/harness-core/src/config/: mod.rs
crates/harness-core/src/evidence/: claim.rs  context7.rs  fetched.rs  internal.rs  memory.rs  mod.rs
crates/harness-core/src/graph/: client.rs  mod.rs  node.rs
crates/harness-core/src/guard/: hook_event.rs  hook_runner.rs  mod.rs  stop_audit.rs
crates/harness-core/src/init/: mod.rs
crates/harness-core/src/lifecycle/: consumer.rs  decision.rs  decision_recorder.rs  mod.rs  observation.rs  retire.rs  retirement.rs
crates/harness-core/src/policy/: mod.rs  permissions.rs  profiles.rs  versions.rs
crates/harness-core/src/telemetry/: jsonl.rs  kind.rs  mod.rs
crates/harness-core/src/validate/: commit_msg.rs  frontmatter.rs  mod.rs  rules.rs  settings.rs  skills.rs
crates/harness-core/templates/: CLAUDE.md  README.md  constitution.md  harness.toml
crates/harness-core/templates/hooks/: _runner.sh  _stop_runner.sh  check-on-stop.sh  post-format.sh  session-start.sh
crates/harness-core/tests/: check.rs  codegen.rs  evidence.rs  guard.rs  lifecycle.rs  pattern_manifest_sync.rs  plugin_scaffold_validates.rs  policy_template_sync.rs  spec_facts_sync.rs  telemetry.rs  validate.rs
examples/: harness.toml.minimal  harness.toml.team
hooks/: _runner.sh
plugins/harnex/: CLAUDE.md  SKILL.md
plugins/harnex/reference/: exploration.md  keep-soften-cut.md  language-matrix.md  spec-facts.md
plugins/harnex/templates/: managed-files.toml
plugins/harnex/templates/common/: CLAUDE.md  _stop_runner.sh  check-on-stop.sh  constitution.md  hooks.json  permissions.deny.json  session-start.sh  skill-template.md
plugins/harnex/templates/patterns/: manifest.toml
reference/: enforced-vs-advisory.md
schemas/: harness.schema.json
skills/harnex/reference/: exploration.md  keep-soften-cut.md
templates/common/: check-on-stop.sh  constitution.md
templates/python/: permissions.allow.json  session-start.sh
templates/typescript/: post-format.sh
(+40 files in other folders)
