[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin clap wrapper exposing harness-core as the `harness` CLI."

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
harness-core = { path = "../harness-core" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete.workspace = true
jiff.workspace = true

[lints]
workspace = true
