[package]
name = "harness-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Embeddable library for harness-toolkit — deterministic harness engineering for Claude Code projects."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
jiff.workspace = true
url.workspace = true
glob.workspace = true
regex.workspace = true
semver.workspace = true
tempfile.workspace = true
serde_yml.workspace = true
walkdir.workspace = true
schemars.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
